assets/css/style.css
/*----------------------Colors */
.hero-text-container {
    background-color: rgba(191, 155, 191, 0.8);
}

.tl-item,
.history-content-top-row,
.history-content {
    background-color: #BF9BBF;
}


#footer-container {
    background-color: #B495B0;
}

body,
#logo,
.modal-content,
.image-gallery-container {
    background-color: rgba(232, 232, 232, 0.9);
}


/*-------------------Special paddings/margins/text */

h2,
h3,
h4,
h5 {
    font-family: Ubuntu, sans-serif;
    font-weight: 700;
    margin-bottom: 20px;
    color: #140B14;
}

.live-heading,
.history-heading,
.gallery-heading {
    font-size: 35px;
    letter-spacing: 2px;
}

h1,
h2,
h3,
h4,
h5 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

.hero-image-container {
    margin-bottom: 0;
}

.history-grid-container,
.image-gallery-container,
.timeline-container {
    margin-bottom: 12vh;
}


/*----------------------Header */

#logo-container {
    text-align: center;
}

#logo {
    font-family: Monoton;
    margin-top: 8px;
    color: #140B14;
}

/*how to push header/nav down> */
.header-container {
    margin-top: 10px;
    margin-bottom: 15px;
    max-height: 90px;
    width: 98%;
}

/*tutor support to help with nav alignment*/
#navbarText {
    justify-content: flex-end;
}

/*tutor support to help with nav alignment*/
#nav-list {
    margin: 0 !important;
}

a {
    overflow: hidden;
    Margin-top: 5px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    color: #140B14;
    text-decoration: none;
    font-size: 20px;
}

/* Moved from above to stop offestting the soical links at the bottom*/
.nav-item a {
    letter-spacing: 2px;
    padding: 5px 5px 10px 5px;
}

/* Change the color of links on hover */
nav a:hover {
    color: #ececef;
}

/*Change the color of the link for current page */
#nav-home a,
#nav-gallery a,
#nav-history a {
    color: #ececef;
}

#alert-container {
    margin-top: 6vh;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 50px;
}

#ticket-alert {
    position: relative;
    background-color: #B3B7B7;
    margin: 5px;
    text-align: center;
    font-size: 16px;
    letter-spacing: 2px;
    max-height: 30px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    padding: 6px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#buy-link {
    font-size: 16px;
    margin: 0;
    padding: 5px;
    color: #610000;
}


/*-------------------Homepage */

.hero-image-container {
    padding: 0;
    width: 100%;
}

.hero-image {
    position: relative;
    opacity: 0.7;
    margin: 0;
    padding: 0;
}

.hero-text-container {
    position: relative;
    height: 200px;
    text-align: center;
    width: fit-content;
    font-size: 22px;
    border-radius: 10px;
    padding: 20px 15px;
}

.stars {
    font-size: 30px;
    color: #140B14;
}

/*-------------------History Page */

.history-grid-container {
    width: 90%;
}

#history-image1 {
    background: url("../images/band-practice-cropped.webp") no-repeat bottom center;
    background-size: cover;
}

#history-image2 {
    background: url("../images/history2cropped.webp") no-repeat bottom center;
    background-size: cover;
    padding: 0;
}

.live-video,
.history-video {
    box-sizing: border-box;
    border: 1px solid #151C32;
    border-radius: 10px;
    margin-top: 8px;
    background-color: black;
    /* Resource used to better fit iframe to container
            https: //www.tutorialspoint.com/how-to-set-div-width-to-fit-content-using-css#:~:text=Using%20the%20fit%2Dcontent%20value,on%20its%20parent%20container's%20width.*/
    height: 390px;
}

#festival-image {
    background: url("../images/festival-stage.webp") no-repeat center center;
    background-size: cover;
    padding: 0;
}

.history-content-top-row,
.history-content {
    margin-top: 8px;
    margin-bottom: 10px;
    min-height: 340px;
    box-sizing: border-box;
    border: 1px solid #151C32;
    border-radius: 10px;
}

.history-text h3 {
    text-align: center;
    font-size: 20px;
    padding-top: 20px;
}

.history-text p {
    color: #151C32;
    font-size: 20px;
    font-family: "Cabin Condensed", sans-serif;
    padding: 20px 30px 10px 20px;
}


/*-------------------Gallery Page */

/*-------------------Responsive Gallery Styling */

.gallery-heading {
    margin-top: 20px;
    margin-bottom: 10px;
    letter-spacing: 2px;
    color: #151C32;
}

/* Code below from tutorial: (https: //blog.logrocket.com/responsive-image-gallery-css-flexbox/)
    Code source: https: //codesandbox.io/s/delicate-wave-sts6l7?file=/style.css:395-1242) */

/* Responsive image gallery rules begin*/

.image-gallery {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 5px 0;
    gap: 15px;
}

.image-gallery-container {
    margin-top: 5vh;
    min-width: 80%;
}

.image-gallery li {
    flex: 1 1 auto;
    /* or flex: auto; */
    height: 400px;
    cursor: pointer;
    position: relative;
}

.image-gallery::after {
    content: "";
    flex-grow: 999;
}

.image-gallery li img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    border-radius: 10px;
    border: 1px solid #151C32;
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(57, 57, 57, 0.502);
    top: 0;
    left: 0;
    transform: scale(0);
    transition: all 0.2s 0.1s ease-in-out;
    font-family: "Cabin Condensed", sans-serif;
    color: #ececef;
    border-radius: 10px;
    /* center overlay content */
    display: flex;
    align-items: center;
    justify-content: center;
}

/* hover */
.image-gallery li:hover .overlay {
    transform: scale(1);
}


/*-------------------Live */

.timeline-area {
    border-left: 4px solid #140B14;
}
/* ... */

